objects/amc__Holiday_Allowance__c.object
<CustomObject>
    <fields>
        <fullName>amc__Accrual__c</fullName>
        <defaultValue>IF(
 NOT(
  ISBLANK(
   $Setup.amc__Rates__c.amc__Accrual__c
  )
 ),
 $Setup.amc__Rates__c.amc__Accrual__c,
 1
)</defaultValue>
        <inlineHelpText>Identifies the percentage of the Holiday Allowance that can be accrued</inlineHelpText>
        <label>Accrual %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Accrues__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the Holiday Allowance can be accrued to a future period</inlineHelpText>
        <label>Accrues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Allowance__c</fullName>
        <inlineHelpText>Identifies the number of days allocated to this Holiday Allowance</inlineHelpText>
        <label>Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Identifies the End Date for this Holiday Allowance</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Remaining__c</fullName>
        <formula>IF(amc__End_Date__c &gt;=TODAY(),amc__Allowance__c - amc__Used__c , IF(amc__Accrues__c = TRUE , IF(amc__Accrual__c &gt; 0,IF((amc__Allowance__c * amc__Accrual__c)&gt;(amc__Allowance__c - amc__Used__c),(amc__Allowance__c - amc__Used__c),(amc__Allowance__c * amc__Accrual__c)),(amc__Allowance__c - amc__Used__c)),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies how many days are remaining from this Holiday Allowance</inlineHelpText>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role this Holiday Allowance relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Holiday Allowances</relationshipLabel>
        <relationshipName>Holiday_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Identifies the Start Date for this Holiday Allowance</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Type__c</fullName>
        <inlineHelpText>Identifies the Type of Holiday Allowance</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>VTO</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Used__c</fullName>
        <inlineHelpText>Identifies the number of days used from this Holiday Allowance</inlineHelpText>
        <label>Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Holiday Allowance</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Holiday Allowance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>